<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/door"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/good_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear1"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/next1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginBottom="90dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"

            />


        <TextView
            android:id="@+id/next_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="10dp"
            android:text="@string/do_next"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/welcome_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="15dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/email_et"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/vvedite_shape"
            android:hint="@string/email"
            android:paddingStart="25dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:background="@drawable/vvedite_shape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/to_come_in"
            android:layout_width="350dp"
            android:layout_height="49dp"
            android:background="@drawable/gray_bg"
            android:text="@string/voyti"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password1"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/click"
                android:textAllCaps="false"
                android:textColor="#FF9800" />

        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>